...
                            )
                        }
                        .accessibilityIdentifier("BackupSettings")

                        NavigationLink(value: Route.paykitDashboard) {
                            SettingsListLabel(
                                title: "Paykit",
                                iconName: "lightning"
                            )
                        }
                        .accessibilityIdentifier("PaykitDashboard")

                        NavigationLink(value: Route.advancedSettings) {
...
